--- a/style.css
+++ b/style.css
@@ -1,32 +1,30 @@
-*{
+* {
     margin: 0;
-    padding: 0;
-    
-}
-a{
+    padding: 0; 
+  }
+a {
     text-decoration: none;
     font-size: 1.4rem;
     color: rgb(90, 23, 23);
-}
-#video{
+  }
+#video {
     width: 800px;
     height: 500px; 
-   display: block;
-   margin: auto;
+    display: block;
+    margin: auto;
 }
-#header-img{
+#header-img {
     width: auto;
     height: 70px;
 }
 
-#header{
+#header {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: .5rem .5rem .5rem 1.5rem;
+    padding: 0.5rem 0.5rem 0.5rem 1.5rem;
 }
-
 #section1 {
     background: rgb(95, 54, 95);
     padding: 4rem 0 1rem 0;
@@ -34,9 +32,8 @@ a{
 }
 #section1 > p {
     font-family: sans-serif;
-    font-size: 1rem;
     font-weight: 500;
-    width:90%;
+    width: 90%;
     margin: auto;
     color: white;
     font-size: 1.8rem;
@@ -45,47 +42,41 @@ a{
     margin-top: 3rem;
     width: 500px;
 }
-
-
-#section2{
+#section2 {
     background: rgb(13, 13, 143);
     padding: 5rem 0;
 }
-#form{
+#form {
     padding: 5rem 0 3rem 0;
     text-align: center;
-    background:#6E2C00;
+    background: #6e2c00;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-#email{
+#email {
     margin-bottom: 1rem;
     border-radius: .5rem;
     padding: 1rem 0 1rem 3rem;
-
 }
-#submit{
+#submit {
     background: rgb(13, 13, 143);
-    padding: .4rem 3rem;
+    padding: 0.4rem 3rem;
     color: white;
-
 }
 
 @media screen and (min-width:750px) {
 
-    a{
-    font-size: 1.8rem;
-    margin-right: 2rem ;
+a {
+   font-size: 1.8rem;
+   margin-right: 2rem;
 }
-#email{
-
+#email {
    width: 500px;
    font-size: 1rem;
-
 }
-#submit{
+#submit {
     width: 200px;
 }
 
